--- a/incometax.html
+++ b/incometax.html
@@ -98,7 +98,7 @@
                                     <input type="number" name="" id="basicdeductions">
                                 </div>
                                 <div>
-                                    Medical Insurance - 80D
+                                    Principal on Medical Insurance - 80D
                                     <input type="number" name="" id="medicalinsurance">
                                 </div>
                                 <div>
